# generalizer

./: Cargo.toml  Dockerfile  README.md  README_FM.md
Benchmark/: benchmark_one_pass.sh  benchmark_step_1_projection.sh  benchmark_step_2_composition.sh  benchmark_step_3_nf_checking.sh
Benchmark Composition/: benchmark.sh
Benchmark Composition/maude_mutation/: inter_random_rewrite.py
Benchmark FM26/maude_mutation/: inter_random_rewrite.py  interactions.maude
Examples/Anti-unification/: example5.txt  exemple6.txt
Interaction_examples/appendix_example_1/: example_run.sh  i.hif  signature.hsf
Interaction_examples/appendix_example_2/: example_run.sh  i.hif  j.hif
Interaction_examples/appendix_example_3/: example_run.sh  i.hif  j.hif  sig.hsf
Interaction_examples/appendix_example_4/: example_run.sh  i.hif  j.hif  signature.hsf
Interaction_examples/introduction_example/: example_run.sh  i.hif  signature.hsf
readme/: anti-unification.md  benchmark.md  composition.md  interactions.md
smoke_tests/composition_smoke_test/: composition_smoke_test.sh  j.hif
smoke_tests/reduced_benchmark/: reduced_benchmark.sh
smoke_tests/reduced_benchmark_smoke_test/: reduced_benchmark_smoke_test.sh
src/: main.rs
src/anti_unfication/: generalise.rs  mod.rs
src/anti_unification/: constrained_generalise.rs  error.rs  generalise.rs  generalize.rs  mod.rs  scp_generalize.rs
src/benchmark_fm_26/: benchmark_fm_26.rs  benchmark_fm_step1.rs  benchmark_fm_step2.rs  benchmark_fm_step3.rs  benchmark_ouput.rs  error.rs  mod.rs
src/configuration/: aut.rs  configuration.rs  mod.rs  (+2 more)
(+482 files in other folders)
