[package]
name = "generaliser"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.5.6"                                  # for pest parser
pest_derive = "2.5.6"
clap = {version="=3.2.22",features=["yaml"]}
colored = "2"
rusttype = "=0.9.3"
image = "=0.24.5"                                # for rendering interactions
imageproc = "=0.23.0"                            # ...
image_colored_text ="=0.1.2"
rand = "0.9.0"
maplit = "=1.0.2"
graphviz_dot_builder = "=0.1.2"
rayon = "1.11.0"
crossbeam = "0.8.4"

