[package]
name = "generalizer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
pest = "2.5.6"                                  # for pest parser
pest_derive = "2.5.6"
clap = {version="=3.2.22",features=["yaml"]}
colored = "2"
rusttype = "=0.9.3"
image = "=0.24.5"                                # for rendering interactions
imageproc = "=0.23.0"                            # ...
image_colored_text ="=0.1.2"
rand = "0.9.0"
maplit = "=1.0.2"
graphviz_dot_builder = "=0.1.2"
crossbeam = "0.8.4"
csv = "1.3.1"
graph_process_manager_core = "=0.1.10"
strum_macros = "=0.24.3"
itertools = "0.10.5"
